syntax = "proto3";
option go_package = "Assignment3/grpc/proto";


message Empty{} 


message LamportTimeStamp{

    int32 lamport = 1;
}

message ChitChatMessage{
    string message = 1;
    int32 lamport = 2;
}

service ChitChatServer{

    rpc JoinChat (LamportTimeStamp) returns (Empty) {};
    rpc LeaveChat (LamportTimeStamp) returns (Empty) {};
    rpc SendMessage (ChitChatMessage) returns (Empty) {}; //we likely will need to use streams
    
}